[package]
name = "axum1"
version = "0.1.0"
edition = "2021"
authors = ["Peter Leeh <leeh123peter@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A backend for recipe app"

[dependencies]
# for idiomatic error handling
anyhow = "1.0.72"
thiserror = "1.0.44"
# our choice as a web framework, and other related utilities
axum = { version = "0.6.20", features = ["json", "headers", "multipart"] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
uuid = { version = "1", features = ["v4", "serde"] }
axum-extra = { version = "0.7.7", features = ["cookie", "cookie-signed", "form"] }
tower-http = { version = "0.4.3", features = ["add-extension", "trace", "cors", "fs", "limit"] }
# for handling dates
chrono = { version = "0.4.26", features = ["serde"] }
time = { version = "0.3.25", features = ["formatting", "serde", "serde-well-known"] }
# for configuration and auxiliary things
config = "0.13.3"
dotenv = "0.15.0"
rand = "0.8.5"
# (de)serialization
serde = { version = "1.0.168", features = ["derive"] }
# database interaction
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "any", "postgres", "json", "macros", "chrono", "uuid", "migrate", "bigdecimal"], default-features = false }
# tracing and logging utilites
sentry = "0.31.5"
sentry-tracing = "0.31"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
log = "0.4.19"
# monitoring
axum-prometheus = "0.4.0"
# password hashing
argon2 = { version = "0.5", features = ["std"] }
# for avoiding exposing sensitive information
secrecy = { version = "0.8.0", features = ["serde"] } 
# session ext
tower = "0.4.13"
futures = "0.3"
async-session = "3.0.0"
async-redis-session = { path = "./crates/async-redis-session" }
# emails
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
# searching
meilisearch-sdk = "0.24.1"
serde_json = "1.0.104"
# OAuth
oauth2 = "4.4.1"
# Input validation
validator = { version = "0.16", features = ["derive"] }
# regex (mostly for validation) and utilities
regex = "1.9.1"
once_cell = "1.18.0"
axum-macros = "0.3.8"
base64 = "0.13" # locked for async_session
blake3 = "*"
paste = "1.0.14"
async-stream = "0.3.5"
pin-project = "1.1.2"
