[package]
name = "axum1"
version = "0.1.0"
edition = "2021"
authors = ["Peter Leeh <leeh123peter@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A backend for recipe app"

[dependencies]
anyhow = "1.0.80"
thiserror = "1.0.57"
# our choice as a web framework, and other related utilities
axum = { version = "0.7.4", features = ["json", "multipart"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
uuid = { version = "1", features = ["v4", "serde"] }
axum-extra = { version = "0.9.2", features = ["cookie", "cookie-signed", "form"] }
tower-http = { version = "0.5.2", features = ["add-extension", "trace", "cors", "fs", "limit"] }
# for handling dates
chrono = { version = "0.4.35", features = ["serde"] }
time = { version = "0.3.30", features = ["formatting", "serde", "serde-well-known"] }
# for configuration and auxiliary things
config = "0.13.2"
dotenv = "0.15.0"
rand = "0.8.5"
# (de)serialization
serde = { version = "1.0.193", features = ["derive"] }
# database interaction
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "any", "postgres", "json", "macros", "chrono", "uuid", "migrate", "bigdecimal"], default-features = false }
# tracing and logging utilites
sentry = "0.32.2"
sentry-tracing = "0.32"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
log = "0.4.20"
# monitoring
axum-prometheus = "0.6.1"
# password hashing
argon2 = { version = "0.5", features = ["std"] }
# for avoiding exposing sensitive information
secrecy = { version = "0.8.0", features = ["serde"] } 
# session ext
tower = "0.4.13"
futures = "0.3"
# emails
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
meilisearch-sdk = "0.24.2"
serde_json = "1.0.109"
# OAuth
oauth2 = "4.4.2"
# Input validation
validator = { version = "0.17", features = ["derive"] }
# regex (mostly for validation) and utilities
regex = "1.10.3"
once_cell = "1.19.0"
axum-macros = "0.4.1"
base64 = "0.21"
blake3 = "*"
paste = "1.0.14"
async-stream = "0.3.5"
pin-project = "1.1.4"
tower-sessions = "0.10.2"
tower-sessions-redis-store = "0.10.0"
