[package]
name = "axum1"
version = "0.1.0"
edition = "2021"
authors = ["Peter Leeh <leeh123peter@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A backend for recipe app"

[dependencies]
anyhow = "1.0.93"
thiserror = "2.0.3"
# our choice as a web framework, and other related utilities
axum = { version = "0.7.9", features = ["json", "multipart"] }
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["io"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
axum-extra = { version = "0.9.6", features = ["cookie", "cookie-signed", "form"] }
tower-http = { version = "0.6.2", features = ["add-extension", "trace", "cors", "fs", "limit"] }
# for handling dates
chrono = { version = "0.4.35", features = ["serde"] }
time = { version = "0.3.30", features = ["formatting", "serde", "serde-well-known"] }
# for configuration and auxiliary things
config = "0.14.1"
dotenvy = "0.15.0"
rand = "0.8.5"
# (de)serialization
serde = { version = "1.0.215", features = ["derive"] }
# database interaction
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "any", "postgres", "json", "macros", "chrono", "uuid", "migrate", "bigdecimal"], default-features = false }
# tracing and logging utilites
sentry = "0.34.0"
sentry-tracing = "0.34"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
log = "0.4.21"
# monitoring
axum-prometheus = "0.7.0"
# password hashing
argon2 = { version = "0.5", features = ["std"] }
# for avoiding exposing sensitive information
secrecy = { version = "0.10.3", features = ["serde"] } 
# session ext
tower = "0.5.1"
futures = "0.3.31"
# emails
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
meilisearch-sdk = "0.27.1"
serde_json = "1.0.133"
# OAuth
oauth2 = "4.4.2"
# Input validation
validator = { version = "0.19.0", features = ["derive"] }
# regex (mostly for validation) and utilities
regex = "1.11"
once_cell = "1.20.2"
axum-macros = "0.4.2"
base64 = "0.22"
blake3 = "*"
paste = "1.0.14"
async-stream = "0.3.6"
pin-project = "1.1.7"
tower-sessions = "0.13.0"
tower-sessions-redis-store = "0.14.0"

[profile.dev.package.sqlx-macros]
opt-level = 3
